test_regress/t/t_tagged_union.out
%Error-UNSUPPORTED: t/t_tagged_union.v:24:17: Unsupported: tagged union
   24 |   typedef union tagged {
      |                 ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_union.v:25:5: Unsupported: void (for tagged unions)
   25 |     void Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:31:17: Unsupported: tagged union
   31 |   typedef union tagged packed {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:32:5: Unsupported: void (for tagged unions)
   32 |     void          Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:52:17: Unsupported: tagged union
   52 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:53:5: Unsupported: void (for tagged unions)
   53 |     void           Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:60:17: Unsupported: tagged union
   60 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:64:11: Unsupported: tagged union
   64 |     union tagged {
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:74:17: Unsupported: tagged union
   74 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:75:5: Unsupported: void (for tagged unions)
   75 |     void    Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:80:17: Unsupported: tagged union
   80 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:81:5: Unsupported: void (for tagged unions)
   81 |     void      Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:89:17: Unsupported: tagged union
   89 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:90:5: Unsupported: void (for tagged unions)
   90 |     void      Invalid;
      |     ^~~~
%Warning-SHORTREAL: t/t_tagged_union.v:92:5: Unsupported: shortreal being promoted to real (suggest use real instead)
   92 |     shortreal ShortRealVal;
      |     ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Error-UNSUPPORTED: t/t_tagged_union.v:96:17: Unsupported: tagged union
   96 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:97:5: Unsupported: void (for tagged unions)
   97 |     void   Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:102:17: Unsupported: tagged union
  102 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:103:5: Unsupported: void (for tagged unions)
  103 |     void  Invalid;
      |     ^~~~
%Error: t/t_tagged_union.v:120:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  120 |     vi1 = tagged Invalid;
      |           ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_union.v:121:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  121 |     vi2 = tagged Invalid;
      |           ^~~~~~
%Error: t/t_tagged_union.v:124:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  124 |     vi1 = tagged Valid (42);
      |           ^~~~~~
%Error: t/t_tagged_union.v:127:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  127 |     vi2 = tagged Valid (23 + 34);
      |           ^~~~~~
%Error: t/t_tagged_union.v:131:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  131 |     mt = tagged Invalid;
      |          ^~~~~~
%Error: t/t_tagged_union.v:133:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  133 |     mt = tagged IntVal (32'h12345678);
      |          ^~~~~~
%Error: t/t_tagged_union.v:136:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  136 |     mt = tagged ShortVal (16'hABCD);
      |          ^~~~~~
%Error: t/t_tagged_union.v:139:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  139 |     mt = tagged ByteVal (8'h5A);
      |          ^~~~~~
%Error: t/t_tagged_union.v:142:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  142 |     mt = tagged BitVal (1'b1);
      |          ^~~~~~
%Error: t/t_tagged_union.v:146:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  146 |     mt = tagged Byte8NonZeroLSB (8'hA5);
      |          ^~~~~~
%Error: t/t_tagged_union.v:149:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  149 |     mt = tagged Word16NonZeroLSB (16'h1234);
      |          ^~~~~~
%Error: t/t_tagged_union.v:153:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  153 |     mt = tagged Word32LittleEndian (32'hDEADBEEF);
      |          ^~~~~~
%Error: t/t_tagged_union.v:156:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  156 |     mt = tagged Word16LittleEndian (16'hCAFE);
      |          ^~~~~~
%Error: t/t_tagged_union.v:160:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  160 |     mt = tagged Wide60 (60'hFEDCBA987654321);
      |          ^~~~~~
%Error: t/t_tagged_union.v:163:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  163 |     mt = tagged Wide60NonZeroLSB (60'h123456789ABCDEF);
      |          ^~~~~~
%Error: t/t_tagged_union.v:166:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  166 |     mt = tagged Wide60LittleEndian (60'hABCDEF012345678);
      |          ^~~~~~
%Error: t/t_tagged_union.v:170:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  170 |     mt = tagged Wide90 (90'hFF_FFFFFFFF_FFFFFFFF_FFFF);
      |          ^~~~~~
%Error: t/t_tagged_union.v:173:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  173 |     mt = tagged Wide90NonZeroLSB (90'hDE_ADBEEFCA_FEBABE12_3456);
      |          ^~~~~~
%Error: t/t_tagged_union.v:176:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  176 |     mt = tagged Wide90LittleEndian (90'h11_11111122_22222233_3333);
      |          ^~~~~~
%Error: t/t_tagged_union.v:180:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  180 |     at = tagged Invalid;
      |          ^~~~~~
%Error: t/t_tagged_union.v:182:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  182 |     at = tagged Scalar (999);
      |          ^~~~~~
%Error: t/t_tagged_union.v:185:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  185 |     at = tagged UnpackedArr '{100, 200, 300, 400};
      |          ^~~~~~
%Error: t/t_tagged_union.v:191:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  191 |     at = tagged UnpackedArr2D '{'{32'hA, 32'hB, 32'hC}, '{32'hD, 32'hE, 32'hF}};
      |          ^~~~~~
%Error: t/t_tagged_union.v:200:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  200 |     instr = tagged Add '{5'd1, 5'd2, 5'd3};
      |             ^~~~~~
%Error: t/t_tagged_union.v:206:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  206 |     instr = tagged Add '{reg2:5'd10, regd:5'd20, reg1:5'd5};
      |             ^~~~~~
%Error: t/t_tagged_union.v:212:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  212 |     instr = tagged Jmp (tagged JmpU 10'd512);
      |             ^~~~~~
%Error: t/t_tagged_union.v:216:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  216 |     instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |             ^~~~~~
%Error: t/t_tagged_union.v:221:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  221 |     instr = tagged Jmp (tagged JmpC '{cc:2'd3, addr:10'd100});
      |             ^~~~~~
%Error: t/t_tagged_union.v:226:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  226 |     cht = tagged Invalid;
      |           ^~~~~~
%Error: t/t_tagged_union.v:227:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  227 |     cht = tagged Handle (null);
      |           ^~~~~~
%Error: t/t_tagged_union.v:231:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  231 |     clt = tagged Invalid;
      |           ^~~~~~
%Error: t/t_tagged_union.v:232:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  232 |     clt = tagged Obj (obj);
      |           ^~~~~~
%Error: Exiting due to
